--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ h1{
 h2{
 	padding: 5 5 5 5;
 	color:white;
-	font: 22px verdana;
-	
+	font: 22px verdana;	
 	background-color:#ADADAD;
 	border-radius: 7px;
 	
@@ -71,7 +70,7 @@ nav ul li a:hover{
 	background-color: lightgrey;
 }
 
-.foto{
+.photo{
 	width: 200px;
 	height: 200px;
 	margin-left:350px;
@@ -81,12 +80,12 @@ nav ul li a:hover{
     background-repeat: no-repeat;
 }
 
-#about {
+.about {
 	width: 700px;
-	height: 335px;
+	height: 300px;
 	background-color: #ccc;
 	position: absolute;
-	margin-top:110px;
+	margin-top:150px;
 	margin-right: 150px;
 	top: 125px;
 	left: 575px;
@@ -106,36 +105,38 @@ nav ul li a:hover{
 	list-style:none;
 }
 
-#skills{
+.skills{
 	text-align: center;
 	margin-top:100px;
 	margin-bottom:20px;
-	list-style:none;
 }
 
-#skills ul li{
+.skills ul li{
 	display: inline-block;
 }
 
-#skills ul li img{
+.skills ul li img{
 	margin-top:20px;
 	height: 75px;
 	width: 65px;
 	margin: 20px;
 }
+.skills ul li span{
+	display: inline-block;
+}
 
-#project{
+.project{
 	text-align: center;
 	font: 15px arial;
 }
-#project ul li{
+.project ul li{
 	margin-top:20px;
 	margin-bottom:20px;
 	display: inline-block;
 	list-style:none;
 }
 
-#project ul li span{
+.project ul li span{
 	transition: opacity 0.7s ease-in;
     -ms-transition: opacity 0.7s ease-in;
     -moz-transition: opacity 0.7s ease-in;
@@ -146,7 +147,7 @@ nav ul li a:hover{
 	margin:5px;
 }
 
-#project ul li:hover span{
+.project ul li:hover span{
 	transition: opacity 0.7s ease-out;
     -ms-transition: opacity 0.7s ease-out;
     -moz-transition: opacity 0.7s ease-out;
@@ -155,27 +156,18 @@ nav ul li a:hover{
 	opacity: 1;
 }
 
-#project ul li img{
+.project ul li img{
 	width: 500px;
 	height: 275px;
 	border-radius:10px;
 }
 
-td {
-    text-align: left;
-    color: blue;
-}
-
-tr:nth-child(even){
-	background-color: #f2f2f2;
-}
-
-#contact{
+.contact{
 	text-align: center;
 	font: 15px verdana;
 }
 
-#contact form{
+.contact form{
 	margin-top:20px;
 }
 
