--- a/css/style.css
+++ b/css/style.css
@@ -28,19 +28,13 @@ h2{
 	border-radius: 7px;
 	
 }
-h2 a{
-	text-decoration: none;
-	color:white;
-}
-
 h3{
 	color: red;
 	font: 20px verdana;
 }
 
 nav{
-	margin: 0 auto;
-	margin-top:25px;
+	margin: 25px auto;
 	max-width: 350px;
 	background: #ADADAD;
 	border: 2px solid;
@@ -73,11 +67,9 @@ nav ul li a:hover{
 .photo{
 	width: 200px;
 	height: 200px;
-	margin-left:350px;
-	margin-top:75px;
+	margin:75px 350px;
 	border-radius: 200px;
-    background: url(../images/profiel.jpg);
-    background-repeat: no-repeat;
+    background: url(../images/profiel.jpg)no-repeat;
 }
 
 .about {
@@ -85,15 +77,10 @@ nav ul li a:hover{
 	height: 300px;
 	background-color: #ccc;
 	position: absolute;
-	margin-top:150px;
-	margin-right: 150px;
-	top: 125px;
 	left: 575px;
 	border:1px; 
 	border-radius: 1em 1em 1em 1em;
 	padding: 5px;
-	-webkit-transition: all 0.5s ease-in-out;
-	float:right;
 	font-family: verdana;
 }
 
@@ -107,8 +94,7 @@ nav ul li a:hover{
 
 .skills{
 	text-align: center;
-	margin-top:100px;
-	margin-bottom:20px;
+	margin: 0px 0px 20px;
 }
 
 .skills ul li{
@@ -116,7 +102,7 @@ nav ul li a:hover{
 }
 
 .skills ul li img{
-	margin-top:20px;
+	margin:20px;
 	height: 75px;
 	width: 65px;
 	margin: 20px;
@@ -130,8 +116,7 @@ nav ul li a:hover{
 	font: 15px arial;
 }
 .project ul li{
-	margin-top:20px;
-	margin-bottom:20px;
+	margin: 20px 0px 20px;
 	display: inline-block;
 	list-style:none;
 }
@@ -168,7 +153,7 @@ nav ul li a:hover{
 }
 
 .contact form{
-	margin-top:20px;
+	margin:20px;
 }
 
 .contact_item{
